--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=demo_cssc
 # Configuração do H2 para testes
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Flyway pode ser desativado se não for necessário ainda
 spring.flyway.enabled=false
+
+logging.level.org.springframework.security=DEBUG
+
