--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo_cssc
-# Configuração do H2 para testes
+# ConfiguraÃ§Ã£o do H2 para testes
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -8,8 +8,12 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Flyway pode ser desativado se não for necessário ainda
-spring.flyway.enabled=false
+# Flyway pode ser desativado se nÃ£o for necessÃ¡rio ainda
+spring.flyway.enabled=true
+# Configuração do Flyway para criar e gerenciar o schema automaticamente
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.locations=classpath:db/migration
 
 logging.level.org.springframework.security=DEBUG
 
