--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo_cssc
 # ConfiguraÃ§Ã£o do H2 para testes
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=SET SCHEMA PUBLIC
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -15,5 +15,9 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.locations=classpath:db/migration
 
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=INFO
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
