--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>10.20.1</version>
+				<configuration>
+					<url>jdbc:postgresql://localhost:5432/demo_cssc</url>
+					<user>admin</user>
+					<password>admin</password>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
