--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,34 @@
+# Nome da aplicação
 spring.application.name=demo_cssc
-# ConfiguraÃ§Ã£o do H2 para testes
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=SET SCHEMA PUBLIC
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Flyway pode ser desativado se nÃ£o for necessÃ¡rio ainda
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo_cssc
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração do JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# Configuração do Flyway (Migração do Banco)
 spring.flyway.enabled=true
-# Configuração do Flyway para criar e gerenciar o schema automaticamente
+spring.flyway.url=jdbc:postgresql://localhost:5432/demo_cssc
+spring.flyway.user=admin
+spring.flyway.password=admin
 spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.locations=classpath:db/migration
+spring.flyway.clean-disabled=false
+spring.datasource.hikari.schema=public
 
-logging.level.org.springframework.security=INFO
 
+
+# Configuração do Swagger/OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
+
