--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Configuração do JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+# mudar para spring.jpa.hibernate.ddl-auto=validate se as tabelas já existirem
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
